Cleaning up home design (#4747)
* added new svgs and fixed their css

* fixed blog buttons colors

--- a/overrides/assets/stylesheets/home.css
+++ b/overrides/assets/stylesheets/home.css
@@ -146,7 +146,7 @@ h2.secondary-headline, h3.trusted-by {
 }
 
 .trusted-by-container .logo.triggermesh img {
-  width: 121pt;
+  max-width: 120pt;
   height: auto;
 }
 
@@ -413,6 +413,10 @@ h2.secondary-headline, h3.trusted-by {
 
 .whats-next-container .twemoji svg:hover {
   color: #7cc57c;
+}
+
+.md-typeset .md-button {
+  color: #024c93;
 }
 
 @media only screen and (max-width: 1219px) {
