--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -183,6 +183,10 @@ a.md-header__button.md-logo img {
   font-size: 100%;
 }
 
+.md-typeset .md-button.white {
+  color: #024c93;
+}
+
 /* Giving h4 tag distinctive style because it is non-differntial with bold text */
 .md-typeset h4 {
   font-size: .9rem;
