fixed extra css

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -183,7 +183,7 @@ a.md-header__button.md-logo img {
   font-size: 100%;
 }
 
-.md-typeset .md-button.white {
+.md-typeset .md-button {
   color: #024c93;
 }
 
