adds cncf incubation notice
Signed-off-by: Paul S. Schweigert <paulschw@us.ibm.com>

--- a/overrides/assets/stylesheets/home.css
+++ b/overrides/assets/stylesheets/home.css
@@ -51,7 +51,7 @@
 .why-serverless-container, .need-to-know-more-container,
 .knative-components-container, .trying-it-all-container,
 .whats-next-container, .whats-next-container,
-.case-studies-container {
+.case-studies-container, .cncf-notice-container {
   text-align: center;
   padding: 4em 3em;
 }
@@ -418,6 +418,26 @@ h2.secondary-headline, h3.trusted-by {
 .md-typeset .md-button.white {
   color: white;
 }
+
+/* cncf notice container css */
+.cncf-notice-container {
+  background-color: white;
+  padding-top: 0;
+}
+
+.cncf-notice-container h3 {
+  font-weight: bold;
+  color: var(--md-default-fg-color--light);
+  margin-top: 0;
+}
+
+.md-typeset img.cncf-logo {
+  width: 40%;
+  max-width: 500px;
+  margin: 1rem;
+}
+
+
 
 @media only screen and (max-width: 1219px) {
   .md-header__topic {
