Add CC BY 4.0 info in footer (#4895)
* Add CC BY 4.0 info in footer

Signed-off-by: Carlos Santana <csantana23@gmail.com>

* fix trailing space

Signed-off-by: Carlos Santana <csantana23@gmail.com>

* made strings shorter

Signed-off-by: Carlos Santana <csantana23@gmail.com>

--- a/overrides/partials/footer.html
+++ b/overrides/partials/footer.html
@@ -68,20 +68,16 @@
             {{ config.copyright }}
           </div>
         {% endif %}
-        Made with
-        <a
-          href="https://squidfunk.github.io/mkdocs-material/"
-          target="_blank" rel="noopener"
-        >
-          Material for MkDocs
-        </a>
         {{ extracopyright }}
+        Documentation Distributed under CC BY 4.0
       </div>
 
       <div class="footer-links md-footer-copyright">
         <a href="https://policies.google.com/privacy">Privacy Policy</a> |
         <a href="/development/about-analytics-cookies/">Cookie Usage</a> |
-        <a href="https://github.com/knative/docs/blob/main/LICENSE">Knative Licensing</a>
+        <a href="https://github.com/knative/docs/blob/main/LICENSE">Apache-2.0 LICENSE</a> |
+        <a href="https://github.com/knative/docs/blob/main/LICENSE-docs">CC BY 4.0 LICENSE</a> |
+        <a href="https://squidfunk.github.io/mkdocs-material/">Made by Material MkDocs</a>
       </div>
 
       <!-- Social links -->
