--- a/blog/overrides/partials/source-file.html
+++ b/blog/overrides/partials/source-file.html
@@ -3,12 +3,14 @@
 <!-- based on https://timvink.github.io/mkdocs-git-revision-date-localized-plugin/howto/override-a-theme -->
 
 <p class="md-source-file">
-  <strong>
-    Published on:
-    {{ page.meta.git_creation_date_localized }}
-    ,&nbsp;
-    Revised on:
-    {{ page.meta.git_revision_date_localized }}
-  </strong>
+    <strong>
+        {% if page.meta.git_creation_date_localized == page.meta.git_revision_date_localized%}
+            Published on:
+            {{ page.meta.git_creation_date_localized }}
+        {% else %}
+            Revised on:
+            {{ page.meta.git_revision_date_localized }}
+        {% endif %}
+    </strong>
 </p>
 {% endif %}
