--- a/overrides/partials/footer.html
+++ b/overrides/partials/footer.html
@@ -73,8 +73,9 @@
       </div>
 
       <div class="footer-links md-footer-copyright">
+        <a href="https://www.linuxfoundation.org/legal/trademark-usage">Trademarks</a> |
         <a href="https://policies.google.com/privacy">Privacy Policy</a> |
-        <a href="/development/about-analytics-cookies/">Cookie Usage</a> |
+        <a href="/docs/about-analytics-cookies/">Cookie Usage</a> |
         <a href="https://github.com/knative/docs/blob/main/LICENSE">Apache-2.0 LICENSE</a> |
         <a href="https://github.com/knative/docs/blob/main/LICENSE-docs">CC BY 4.0 LICENSE</a> |
         <a href="https://squidfunk.github.io/mkdocs-material/">Made by Material MkDocs</a>
@@ -98,7 +99,7 @@
   </div>
 </footer>
 
-<!-- Cookie Bannier -->
+<!-- Cookie Banner -->
 <div id="cookieModal" class="md-typeset modal custom fade" role="dialog" data-backdrop="false">
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
