Add linux foundation trademark (#5830)
* Add linux foundation trademark

* Update cookie banner url

--- a/overrides/partials/footer.html
+++ b/overrides/partials/footer.html
@@ -73,8 +73,9 @@
       </div>
 
       <div class="footer-links md-footer-copyright">
+        <a href="https://www.linuxfoundation.org/legal/trademark-usage">Trademarks</a> |
         <a href="https://policies.google.com/privacy">Privacy Policy</a> |
-        <a href="/development/about-analytics-cookies/">Cookie Usage</a> |
+        <a href="/docs/about-analytics-cookies/">Cookie Usage</a> |
         <a href="https://github.com/knative/docs/blob/main/LICENSE">Apache-2.0 LICENSE</a> |
         <a href="https://github.com/knative/docs/blob/main/LICENSE-docs">CC BY 4.0 LICENSE</a> |
         <a href="https://squidfunk.github.io/mkdocs-material/">Made by Material MkDocs</a>
@@ -98,7 +99,7 @@
   </div>
 </footer>
 
-<!-- Cookie Bannier -->
+<!-- Cookie Banner -->
 <div id="cookieModal" class="md-typeset modal custom fade" role="dialog" data-backdrop="false">
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
@@ -109,7 +110,7 @@
           <button type="button" class="md-button md-button--primary" onclick="acceptcookie()">Accept</button>
           <div class="opt-out">
             <hr>
-            <p><a href="/development/about-analytics-cookies/">Learn about analytics cookies and how you can take steps to opt-out from sharing your usage data.</a></p>
+            <p><a href="/docs/about-analytics-cookies/">Learn about analytics cookies and how you can take steps to opt-out from sharing your usage data.</a></p>
             <button type="button" class="md-button" onclick="optout()">I understand how to opt-out, hide this notice.</button>
           </div>
         </div>
@@ -120,7 +121,7 @@
 <div class="cookienotice md-typeset">
   <div class="text">
     <p>We use analytics and cookies to understand site traffic. Information about your use of
-      our site is shared with Google for that purpose. <a href="/development/about-analytics-cookies/">Learn more.</a>
+      our site is shared with Google for that purpose. <a href="/docs/about-analytics-cookies/">Learn more.</a>
     </p>
   </div>
   <div class="buttons">
