Improve footer layout on mobile devices

--- a/overrides/assets/stylesheets/home.css
+++ b/overrides/assets/stylesheets/home.css
@@ -509,6 +509,11 @@ h2.secondary-headline, h3.trusted-by {
   .case-studies-container .col .normal-text {
     padding-right: .5em;
   }
+
+  footer .footer-links {
+    display: block;
+    margin: 5px;
+  }
 }
 
 /* No next/prev links on home page so make sure next/prev area of footer collapses nicely */
@@ -518,4 +523,8 @@ footer nav.md-footer__inner {
 
 footer .md-footer-meta .md-footer-meta__inner {
   padding: 1em 0;
+}
+
+footer .md-footer-copyright {
+  margin: 5px;
 }
