implemented new design of navbar

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -64,16 +64,20 @@ a.md-header__button.md-logo img {
 .md-header__source {
   color: #034b95;
 }
-
+.md-search__form{
+  border-radius: 10px;
+}
 .md-search__input {
   background-color: white;
   border: black 1px solid;
+  border-radius: 10px;
 }
 
 .md-search__input::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: #4d4d4d;
   opacity: 1;
+  border-radius: 10px;
   /* Firefox */
 }
 
@@ -94,6 +98,9 @@ a.md-header__button.md-logo img {
 .md-search__icon[for=__search] {
   color: var(--md-default-fg-color--light);
 }
+.md-source{
+  margin-left:-1.4rem;
+}
 
 .md-source__icon+.md-source__repository {
   font-weight: bold;
@@ -110,6 +117,13 @@ a.md-header__button.md-logo img {
   color: white;
   padding: 0 2em;
 }
+.md-tabs__list li:nth-last-child(3){
+border-radius: 20% 0 0 0 ;
+}
+.md-tabs__list li:nth-last-child(1){
+  border-radius:0 18% 0 0 ;
+  }
+
 
 .md-tabs__list li:nth-last-child(1) a,
 .md-tabs__list li:nth-last-child(2) a,
