changed the hover colour for better visibility in navbar

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -120,7 +120,7 @@ a.md-header__button.md-logo img {
 .md-tabs__list li:nth-last-child(1) a:hover,
 .md-tabs__list li:nth-last-child(2) a:hover,
 .md-tabs__list li:nth-last-child(3) a:hover {
-  color: var(--md-accent-fg-color);
+  color: #f3f1f2;
 }
 
 .md-nav__title .md-nav__button.md-logo img,
